# BabaIsYou

./: .gitignore  README.md  RapportBabaIsYou.docx  ~$plications du diagramme de classe.docx  ~$pportBabaIsYou.docx
Projet_Baba_Is_You/: CMakeLists.txt  CMakeLists.txt.user.f56ee1e  caveview.cpp  caveview.h  caveview.ui  chooselevel.cpp  chooselevel.h  chooselevel.ui  enum_to_class_to_enum.pro  help.cpp  help.h  help.ui  savelevel.cpp  savelevel.h  savelevel.ui  start.cpp  start.h  start.ui  win.cpp  win.h  win.ui
Projet_Baba_Is_You/headerFile/controller/: controller.h
Projet_Baba_Is_You/headerFile/model/: babaisyou.h  board.h  command.h  complement.h  direction.h  element.h  enum.h  levelLoader.h  managerCommand.h  materials.h  moveCommand.h  operator.h  position.h  rule.h  ruleManager.h  subject.h  tiles.h  words.h
Projet_Baba_Is_You/headerFile/util/: observable.h  observer.h
Projet_Baba_Is_You/headerFile/view/: view.h
Projet_Baba_Is_You/sourceFile/controller/: controller.cpp  main.cpp
Projet_Baba_Is_You/sourceFile/level/: level_0.txt  level_1.txt  level_3.txt  level_4.txt
Projet_Baba_Is_You/sourceFile/levelSaved/: 0.txt  1.txt  10.txt  1000.txt  1111.txt  12.txt  2.txt  5.txt
Projet_Baba_Is_You/sourceFile/model/: babaIsYou.cpp  board.cpp  complement.cpp  element.cpp  levelLoader.cpp  managerCommand.cpp  materials.cpp  moveCommand.cpp  operator.cpp  rule.cpp  ruleManager.cpp  subject.cpp  tiles.cpp  words.cpp
Projet_Baba_Is_You/sourceFile/view/: view.cpp
Projet_Baba_Is_You/sprite/: grass.jfif  water.jfif
Projet_Baba_Is_You/test/: babaIsYouTest.cpp
Projet_Baba_Is_You/test/catch/: catch.pro
build-Projet_Baba_Is_You-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Projet_Baba_Is_You-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Projet_Baba_Is_You-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Projet_Baba_Is_You-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/Projet_Baba_Is_You_autogen/: deps
build-Projet_Baba_Is_You-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Projet_Baba_Is_You-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Projet_Baba_Is_You-Qt_6_5_0_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  Projet_Baba_Is_You  build.ninja  cmake_install.cmake  qtcsettings.cmake
(+433 files in other folders)
